Set max width to tables and forms so that long message would wrap. Modified width of input fields to align in forms. Had to adjust the help messages to align correctly.

--- a/web/static/admin/css/changelists.css
+++ b/web/static/admin/css/changelists.css
@@ -43,6 +43,7 @@
 #changelist-form .results {
   overflow-x: auto;
   margin-left: 10px;
+  max-width: 950px;
 }
 
 #changelist .toplinks {
